fixed germany de

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
       <div id="text-play"></div>
       <div id="chart-area"></div>
-      <button id="sort">Sort</button>
+      <button type="button" class="btn btn-dark" id="sort">Sort</button>
     </div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.12.0/d3.js"></script>
