--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="jumbotron jumbotron-fluid">
+    <div class="jumbotron jumbotron-fluid jumbotron-cover-image" id="bball">
       <div class="container">
         <h1 class="display-4">
           Great basketball or <span class="text-danger">good</span> coaching?
         </h1>
-        <p class="">
+        <p  class="text-left">
           It is time to take a dive into the remains of the 2019 basketball
           World Championship, now dubbed simply as <em>the FIBA Cup</em>.
           The Serbian and the American national teams failed miserably - what was supposed to be a quite interesting finals became a torture and a missed opportunity for both teams. <br/>
           While the US team couldn't count on a dozen All-Star players in their prime, it is too easy to dismiss the talent that coach Pop has at his disposal. The US has such an overwhelmingly huge player base and they have been playing under the FIBA / international rules for so long, that I find it difficult to dismiss their teams lack of success and file it under the <em>missing key players</em> file.</p>
           <hr/>
-          <p class="">Serbia, on the other hand, is maybe an even bigger dissapointment. A lineup featuring Nikola Jokic, a top 5 NBA player and arguably the most dominant center in the post-Shaq era, an NBA sharpshooter (Bogdanovic) just entering his prime, Milutinov - probably the best center in Europe... It just wasn't enough for two expirienced teams (the amazing Argentina and an even more amazing Spain), filled with veterans playing well beyond their primes.
+          <p  class="text-left">Serbia, on the other hand, is maybe an even bigger dissapointment. A lineup featuring Nikola Jokic, a top 5 NBA player and arguably the most dominant center in the post-Shaq era, an NBA sharpshooter (Bogdanovic) just entering his prime, Milutinov - probably the best center in Europe... It just wasn't enough for two expirienced teams (the amazing Argentina and an even more amazing Spain), filled with veterans playing well beyond their primes.
         </p>
-        <p>This is <em>not</em> an attempt to drill down and find the quantitative causes of the Underdogs Cup. FIBA presents us with a very oldschool set of basketball data: basic individual and team stats, and a couple of extras like efficiency and plus/minus. I tried to visualize some of the data provided on the official World Cup website, and I believe that even this data tells a story, at least a small part of the story.</p>
+        <p class="text-left">This is <em>not</em> an attempt to drill down and find the quantitative causes of the Underdogs Cup. FIBA presents us with a very oldschool set of basketball data: basic individual and team stats, and a couple of extras like efficiency and plus/minus. I tried to visualize some of the data provided on the official World Cup website, and I believe that even this data tells a story, at least a small part of the story.</p>
 
       </div>
     </div>
@@ -106,12 +106,12 @@
       <hr />
 
     </div>
-      <div class="jumbotron jumbotron-fluid mt-5">
+      <div class="jumbotron jumbotron-fluid jumbotron-cover-image mt-5">
         <div class="container">
           <h1 class="display-4">
             How about <span class="text-danger">shooting</span> the ball?
           </h1>
-          <p>
+          <p class="text-left">
            Team stats are maybe more interesting, but here again we can see how the Cup system skews the data: an excellent example is the Serbian team - their group blowout victories inflated the statsheets beyond recognition... In fact, if you were to give this statsheet or visualization to somebody who knows nothing about the teams, would he be able to tell you who won it all? Or who played in the finals? I don't think so.<br>
            A remedy would be a partial analysis, exploring the statistics of the second round, but by then, the damage was already done... 
           </p>
@@ -146,7 +146,7 @@
       <div class="col-sm"><button type="button" class="btn btn-dark btn-block" id="sort2">Sort</button></div>
       
     </div>
-    <div class="jumbotron jumbotron-fluid mt-5 text-left">
+    <div class="jumbotron jumbotron-fluid mt-5 jumbotron-cover-image text-left">
         <div class="container">
           <h1 class="display-4">
            Patterns <span class="text-danger">anyone</span>?
