webdesign 2do buttugly, 2 charts done, 3rd to go

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <div class="col-sm"><button type="button" class="btn btn-dark btn-block" id="sort2">Sort</button></div>
       
     </div>
-    <div class="jumbotron jumbotron-fluid mt-5 jumbotron-cover-image text-left">
+    <div class="jumbotron jumbotron-fluid mt-5 jumbotron-cover-image text-left bottom">
         <div class="container">
           <h1 class="display-4">
            Patterns <span class="text-danger">anyone</span>?
@@ -161,6 +161,7 @@
           </p>
         </div>
       </div>
+      
 
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.12.0/d3.js"></script>
