--- a/index.html
+++ b/index.html
@@ -342,6 +342,19 @@
         </div>
       </div>
 
+      <form name="contact" method="POST" data-netlify="true" action="http://www.freethrow.rs">
+        <div class="form-group">
+          <label for="email">Email address</label>
+          <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        
+        <div class="form-group">
+          <label for="content">Your message</label>
+          <textarea class="form-control" id="content" rows="3"></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
 
       <footer>
         <div class="container">
