added netlify form2

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         </div>
       </div>
 
-      <form name="contact" method="POST" data-netlify="true" action="http://www.freethrow.rs">
+      <form name="contact" method="POST" data-netlify="true" action="/success">
         <div class="form-group">
           <label for="email">Email address</label>
           <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
